src/org/api/core/1.3.15/core.imqoptions.md
---
title: "IMQOptions interface · @imqueue/core"
---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](/api/) &gt; [@imqueue/core](/api/core/1.3.15/) &gt; [IMQOptions](/api/core/1.3.15/core.imqoptions/)

## IMQOptions interface

Message queue options

**Signature:**

```typescript
export interface IMQOptions 
```

## Properties

<table><thead><tr><th>

Property


</th><th>

Modifiers


</th><th>

Type


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[cleanup](/api/core/1.3.15/core.imqoptions.cleanup/)


</td><td>


</td><td>

boolean


</td><td>

Turns on/off cleanup of the message queues

 {<!-- -->boolean<!-- -->}


</td></tr>
<tr><td>

[cleanupFilter](/api/core/1.3.15/core.imqoptions.cleanupfilter/)


</td><td>


</td><td>

string


</td><td>

Defines cleanup pattern for the name of the queue which should be removed during cleanup processing

 {<!-- -->string<!-- -->}


</td></tr>
<tr><td>

[cluster?](/api/core/1.3.15/core.imqoptions.cluster/)


</td><td>


</td><td>

Array&lt;{ host: string; port: number; }&gt;


</td><td>

_(Optional)_ Queue cluster instances, if MQ should be clustered


</td></tr>
<tr><td>

[host?](/api/core/1.3.15/core.imqoptions.host/)


</td><td>


</td><td>

string


</td><td>

_(Optional)_ Message queue network host

 {<!-- -->string<!-- -->}


</td></tr>
<tr><td>

[logger?](/api/core/1.3.15/core.imqoptions.logger/)


</td><td>


</td><td>

[ILogger](/api/core/1.3.15/core.ilogger/)


</td><td>

_(Optional)_ Logger defined to be used within message queue in runtime

 {<!-- -->ILogger<!-- -->}


</td></tr>
<tr><td>

[port?](/api/core/1.3.15/core.imqoptions.port/)


</td><td>


</td><td>

number


</td><td>

_(Optional)_ Message queue network port

 {<!-- -->number<!-- -->}


</td></tr>
<tr><td>

[prefix?](/api/core/1.3.15/core.imqoptions.prefix/)


</td><td>


</td><td>

string


</td><td>

_(Optional)_ Message queue global key prefix (namespace)

 {<!-- -->string<!-- -->}


</td></tr>
<tr><td>

[safeDelivery?](/api/core/1.3.15/core.imqoptions.safedelivery/)


</td><td>


</td><td>

boolean


</td><td>

_(Optional)_ Enables/disables safe message delivery. When safe message delivery is turned on it will use more complex algorithm for message handling by a worker process, guaranteeing that if worker fails the message will be delivered to another possible worker anyway. In most cases it is not required unless it is required by a system design.

 {<!-- -->boolean<!-- -->}


</td></tr>
<tr><td>

[safeDeliveryTtl?](/api/core/1.3.15/core.imqoptions.safedeliveryttl/)


</td><td>


</td><td>

number


</td><td>

_(Optional)_ Time-to-live of worker queues (after this time messages are back to main queue for handling if worker died). Only works if safeDelivery option enabled.

 {<!-- -->number<!-- -->}


</td></tr>
<tr><td>

[useGzip?](/api/core/1.3.15/core.imqoptions.usegzip/)


</td><td>


</td><td>

boolean


</td><td>

_(Optional)_ A way to serialize message using compression. Will increase load to worker process but can decrease network traffic between worker and queue host application

 {<!-- -->boolean<!-- -->}


</td></tr>
<tr><td>

[vendor?](/api/core/1.3.15/core.imqoptions.vendor/)


</td><td>


</td><td>

string


</td><td>

_(Optional)_ Message queue vendor

 {<!-- -->string<!-- -->}


</td></tr>
<tr><td>

[watcherCheckDelay?](/api/core/1.3.15/core.imqoptions.watchercheckdelay/)


</td><td>


</td><td>

number


</td><td>

_(Optional)_ Watcher check delay period. This is used by a queue watcher agent to make sure at least one watcher is available for queue operations.

 {<!-- -->number<!-- -->}


</td></tr>
</tbody></table>

