src/org/api/core/2.0.2/core.imqoptions.md
---
title: "IMQOptions interface · @imqueue/core"
---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](/api/) &gt; [@imqueue/core](/api/core/2.0.2/) &gt; [IMQOptions](/api/core/2.0.2/core.imqoptions/)

## IMQOptions interface

Message queue options

**Signature:**

```typescript
export interface IMQOptions extends Partial<IMessageQueueConnection> 
```
**Extends:** Partial&lt;[IMessageQueueConnection](/api/core/2.0.2/core.imessagequeueconnection/)<!-- -->&gt;

## Properties

<table><thead><tr><th>

Property


</th><th>

Modifiers


</th><th>

Type


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[cleanup](/api/core/2.0.2/core.imqoptions.cleanup/)


</td><td>


</td><td>

boolean


</td><td>

Turns on/off cleanup of the message queues

 {<!-- -->boolean<!-- -->}


</td></tr>
<tr><td>

[cleanupFilter](/api/core/2.0.2/core.imqoptions.cleanupfilter/)


</td><td>


</td><td>

string


</td><td>

Defines cleanup pattern for the name of the queue which should be removed during cleanup processing

 {<!-- -->string<!-- -->}


</td></tr>
<tr><td>

[cluster?](/api/core/2.0.2/core.imqoptions.cluster/)


</td><td>


</td><td>

[IMessageQueueConnection](/api/core/2.0.2/core.imessagequeueconnection/)<!-- -->\[\]


</td><td>

_(Optional)_ Queue cluster instances, if MQ should be clustered

 {<!-- -->IMessageQueueConnection\[\]<!-- -->}


</td></tr>
<tr><td>

[clusterManagers?](/api/core/2.0.2/core.imqoptions.clustermanagers/)


</td><td>


</td><td>

ClusterManager\[\]


</td><td>

_(Optional)_ Array of cluster managers used to handle cluster operations. Any manager implements specific cluster server detection.

 {<!-- -->ClusterManager\[\]<!-- -->}


</td></tr>
<tr><td>

[logger?](/api/core/2.0.2/core.imqoptions.logger/)


</td><td>


</td><td>

[ILogger](/api/core/2.0.2/core.ilogger/)


</td><td>

_(Optional)_ Logger defined to be used within message queue in runtime

 {<!-- -->ILogger<!-- -->}


</td></tr>
<tr><td>

[prefix?](/api/core/2.0.2/core.imqoptions.prefix/)


</td><td>


</td><td>

string


</td><td>

_(Optional)_ Message queue global key prefix (namespace)

 {<!-- -->string<!-- -->}


</td></tr>
<tr><td>

[safeDelivery?](/api/core/2.0.2/core.imqoptions.safedelivery/)


</td><td>


</td><td>

boolean


</td><td>

_(Optional)_ Enables/disables safe message delivery. When safe message delivery is turned on it will use more complex algorithm for message handling by a worker process, guaranteeing that if worker fails the message will be delivered to another possible worker anyway. In most cases it is not required unless it is required by a system design.

 {<!-- -->boolean<!-- -->}


</td></tr>
<tr><td>

[safeDeliveryTtl?](/api/core/2.0.2/core.imqoptions.safedeliveryttl/)


</td><td>


</td><td>

number


</td><td>

_(Optional)_ Time-to-live of worker queues (after this time messages are back to main queue for handling if worker died). Only works if safeDelivery option enabled.

 {<!-- -->number<!-- -->}


</td></tr>
<tr><td>

[useGzip?](/api/core/2.0.2/core.imqoptions.usegzip/)


</td><td>


</td><td>

boolean


</td><td>

_(Optional)_ A way to serialize message using compression. Will increase load to worker process but can decrease network traffic between worker and queue host application

 {<!-- -->boolean<!-- -->}


</td></tr>
<tr><td>

[vendor?](/api/core/2.0.2/core.imqoptions.vendor/)


</td><td>


</td><td>

string


</td><td>

_(Optional)_ Message queue vendor

 {<!-- -->string<!-- -->}


</td></tr>
<tr><td>

[watcherCheckDelay?](/api/core/2.0.2/core.imqoptions.watchercheckdelay/)


</td><td>


</td><td>

number


</td><td>

_(Optional)_ Watcher check delay period. This is used by a queue watcher agent to make sure at least one watcher is available for queue operations.

 {<!-- -->number<!-- -->}


</td></tr>
</tbody></table>

